# openepi-client-py

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: continuous-integration.yml  main-release.yml  master-release.yml
openepi_client/: __init__.py
openepi_client/agriculture/: __init__.py  _agriculture_client.py  _agriculture_types.py
openepi_client/crop_health/: _crop_health_client.py  _crop_health_types.py
openepi_client/deforestation/: _deforestation_client.py
openepi_client/flood/: _flood_client.py  _flood_types.py
openepi_client/geocoding/: _geocoding_client.py  _geocoding_types.py
openepi_client/global_forest_watch/: _create_geostore.py  _download_asset.py  _gfw_client.py  _gfw_types.py
openepi_client/soil/: __init__.py  _soil_client.py  _soil_types.py
openepi_client/weather/: _weather_client.py  _weather_types.py
tests/: mocking.py  test_agriculture_client.py  test_crop_health_client.py  test_deforestation_client.py  test_flood_client.py  test_geocoding_client.py  test_integration_weather.py  test_soil_client.py  test_weather_client.py
tests/global_forest_watch/: test_create_account.py  test_create_apikey.py  test_create_geostore.py  test_get_dataset.py  test_get_geostore.py  test_list_datasets.py
