[project]
name = "openepi-client"
version = "0.1.15"
description = "A python library for interacting with the OpenEPI data"
authors = [
    {name = "Kenneth Stigen", email = "kenneth.stigen@knowit.no"},
    {name = "Daniel Johnsen", email = "daniel.johnsen@knowit.no"},
]
readme = "README.md"

[tool.semantic_release]
version_variables = [
    "setup.py:__version__",
]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.25.2"
pydantic = "^2.10.3"
pydantic-settings = "^2.0.3"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
datamodel-code-generator = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
homepage = "https://www.openepi.io/"
source = "https://github.com/openearthplatforminitiative/openepi-client-py"
